Bugbash issue 4 and 8 (#10)
* Bug bash issue 4 and 8