@@ -4,6 +4,8 @@ import org.hl7.fhir.r4.model.Coding;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -30,15 +32,31 @@ public abstract class CDSTrigger {
 	public abstract CDSCard createRelevantCard(Set<Coding> activeDiagnosesOrMedicationCodings, Set<Coding> draftMedicationOrderCodings);
 
 	public void addReferenceMedicationToCDSCard(Collection<Coding> medicationIntersection, CDSCard cardInstance) {
-		CDSReference cdsReference = new CDSReference(medicationIntersection.stream().map(coding -> new CDSCoding(coding.getSystem(), coding.getCode())).collect(Collectors.toList()));
+		List<CDSReference> cdsReferences = medicationIntersection.stream().map(coding -> new CDSCoding(coding.getSystem(), coding.getCode())).map(cdsCoding -> new CDSReference(Collections.singletonList(cdsCoding))).collect(Collectors.toList());
 		if (cardInstance.getReferenceMedications() == null) {
 			cardInstance.setReferenceMedications(new ArrayList<>());
 		}
-		cardInstance.getReferenceMedications().add(cdsReference);
+		if (cardInstance.getReferenceMedications().isEmpty()) {
+			cardInstance.getReferenceMedications().addAll(cdsReferences);
+			return;
+		}
+		List<String> codes  = new ArrayList<>();
+		cardInstance.getReferenceMedications().forEach(cdsReference -> codes.addAll(cdsReference.getCoding().stream().map(CDSCoding::getCode).toList()));
+		cardInstance.getReferenceMedications().addAll(cdsReferences.stream().filter(cdsReference -> !codes.contains(cdsReference.getCoding().get(0).getCode())).toList());
 	}
 
 	public void addReferenceConditionToCDSCard(Collection<Coding> conditionIntersection, CDSCard cardInstance) {
-		cardInstance.setReferenceCondition(new CDSReference(conditionIntersection.stream().map(coding -> new CDSCoding(coding.getSystem(), coding.getCode())).collect(Collectors.toList())));
+		List<CDSReference> cdsReferences = conditionIntersection.stream().map(coding -> new CDSCoding(coding.getSystem(), coding.getCode())).map(cdsCoding -> new CDSReference(Collections.singletonList(cdsCoding))).collect(Collectors.toList());
+		if(cardInstance.getReferenceConditions() == null) {
+			cardInstance.setReferenceConditions( new ArrayList<>());
+		}
+		if (cardInstance.getReferenceConditions().isEmpty()) {
+			cardInstance.getReferenceConditions().addAll(cdsReferences);
+			return;
+		}
+		List<String> codes  = new ArrayList<>();
+		cardInstance.getReferenceConditions().forEach(cdsReference -> codes.addAll(cdsReference.getCoding().stream().map(CDSCoding::getCode).toList()));
+		cardInstance.getReferenceConditions().addAll(cdsReferences.stream().filter(cdsReference -> !codes.contains(cdsReference.getCoding().get(0).getCode())).toList());
 	}
 
 	public Collection<Coding> getIntersection(Collection<Coding> codingsA, Collection<Coding> codingsB) {
@@ -53,18 +71,19 @@ public abstract class CDSTrigger {
 	}
 
 	public String toHumanReadable(Collection<Coding> codings) {
-		if (codings.isEmpty()) {
+		Collection<String> codingsDisplay = codings.stream().map(Coding::getDisplay).collect(Collectors.toSet());
+		if (codingsDisplay.isEmpty()) {
 			return "";
-		} else if (codings.size() == 1) {
-			return format("\"%s\"", codings.iterator().next().getDisplay());
+		} else if (codingsDisplay.size() == 1) {
+			return format("\"%s\"", codingsDisplay.iterator().next());
 		} else {
 			StringBuilder builder = new StringBuilder();
-			for (Coding coding : codings) {
+			for (String codingDisplay : codingsDisplay) {
 				if (!builder.isEmpty()) {
 					builder.append(" and ");
 				}
 				builder.append("\"");
-				builder.append(coding.getDisplay());
+				builder.append(codingDisplay);
 				builder.append("\"");
 			}
 			return builder.toString();
